# anim2rbx

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: basic_usage.rs
src/: converter.rs  lib.rs  types.rs  utils.rs
src/cli/: main.rs
tests/: integration_tests.rs
