[package]
name = "anim2rbx"
version = "0.2.0"
edition = "2024"
description = "Convert animation files to Roblox KeyframeSequence format"
license = "MIT"
repository = "https://github.com/jiwonz/anim2rbx"
authors = ["jiwonz <me@jiwonz.com>"]
readme = "README.md"
keywords = ["roblox", "animation", "converter", "assimp"]

[[bin]]
name = "anim2rbx"
path = "src/cli/main.rs"

[lib]
name = "anim2rbx"
path = "src/lib.rs"

[patch.crates-io]
# Use a fork of russimp-sys that allows setting the ASSIMP_DIR environment variable
# This is necessary for temporary fixing an issue with russimp-sys not finding the Assimp library
# when using the static-link feature.
# The fork is available at https://github.com/jiwonz/russimp-sys
# The issue is discussed in https://github.com/jkvargas/russimp-sys/issues/45
russimp-sys = { git = "https://github.com/jiwonz/russimp-sys.git", branch = "assimp-dir-env-var" }

[dependencies]
rbx_binary = "1.0.0"
rbx_dom_weak = "3.0.0"
russimp = { version = "3.2.1", features = ["static-link"] }
ordered-float = "5.0.0"
rbx_types = "2.0.0"
glam = "0.30.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
